<resources>
    <string name="app_name">MYDMUCabApp-Driver</string>
    <string name="create_a_new_account"><u>Create a new account</u></string>
    <string name="already_have_account"><u>Already have an account?</u></string>
    <string name="forget_password"><u>Forgotten Password?</u></string>
    <string name="login"><u>Login</u></string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="details">User details</string>
    <string name="scheduled_trips">Scheduled Trips</string>
    <string name="rides_history">Rides history</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="enter_pickup_location">Enter pickup location</string>
    <string name="start_location">start_location</string>
    <string name="available_seats">available_seats</string>
    <string name="phone_number">phone_number</string>
    <string name="searching_for_passengers">Searching for passengers…</string>
    <string name="chat_icon_description">chat</string>
    <string name="contact_passenger">If the passenger does not respond to messages you can contact them on following number</string>
</resources>